tests/function/duplicate_param.rev
fn foo(arg: str, arg: str) { // error: a variable with the same name as already been declared in this scope
    "body"
}